[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyimgur"
dynamic = ["version"]
description = "The easy way of using Imgur"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Andreas Damgaard Pedersen", email = "andreas.damgaard.pedersen@gmail.com"}
]
keywords = ["imgur", "api", "wrapper", "PyImgur"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities"
]
dependencies = [
    "requests",
]

[project.urls]
Homepage = "https://github.com/Damgaard/PyImgur"
Documentation = "https://pyimgur.readthedocs.org"

[tool.hatch.version]
path = "pyimgur/__init__.py"
pattern = '__version__ = "(?P<version>[^"]+)"'

[tool.hatch.build.targets.sdist]
include = [
    "/pyimgur",
    "COPYING",
    "README.rmd",
]

[tool.pytest.ini_options]
testpaths = ["pyimgur/test"]
python_files = ["*_test.py"]

[tool.black]
target-version = ["py39"]

[tool.isort]
profile = "black"
multi_line_output = 3 